# QtPropertyBrowser

./: CMakeLists.txt  README.md  README_ORIG.TXT
doc/: add_new_property_type.diff
examples/simple/: main.cpp
src/: qteditorfactory.cpp  qteditorfactory.h  qtpropertymanager.cpp  qtpropertymanager.h  qtvariantproperty.cpp  qtvariantproperty.h
